--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,8 +7,9 @@ body{
   height: 100%;
   margin: 0;
   padding: 0;
-  background: gray;
+  background: rgba(0, 0, 109, 1);
   position: relative;
+  color: white;
 }
 
 #field{
@@ -24,7 +25,7 @@ body{
 }
 
 #field{
-  background: #6d3636;
+  background: rgba(45, 45, 45, 1);
   position: absolute;
   top:0;
   bottom: 0;
