made snake restartable

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,4 @@
 <div id="candy-counter">
   <h3>Candies eaten: <span id="amount-candies">0</span></h3>
 </div>
+<button id="reset-button-snake">PLAY</button>
